--- a/MJJConsultRevision/package.json
+++ b/MJJConsultRevision/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://localhost:3001",
   "dependencies": {
+    "@fullpage/react-fullpage": "^0.1.16",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
@@ -17,6 +18,8 @@
     "react-fullpage": "^0.1.19",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "react-tooltip": "^3.10.0",
+    "reactstrap": "^8.0.1",
     "sass": "^1.22.10"
   },
   "scripts": {
